# VeritasNodes

./: CMakeLists.txt  README.md
include/Veritas/Nodes/: Flux.h  Input.h  Interface.h  Node.h  NodeClass.h  Nodes.h  Output.h  Runtime.h  RuntimeObject.h
src/: Input.cpp  Interface.cpp  Node.cpp  NodeClass.cpp  Output.cpp  Runtime.cpp  RuntimeObject.cpp
