CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT("VeritasNodes")

AUX_SOURCE_DIRECTORY(src SOURCES)

ADD_LIBRARY(${PROJECT_NAME} ${SOURCES})
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC include)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} VeritasDefinitions)

TARGET_COMPILE_OPTIONS(${PROJECT_NAME} PUBLIC -std=c++11)
